Fix overflowing skill

--- a/src/components/SkillsList.scss
+++ b/src/components/SkillsList.scss
@@ -1,6 +1,6 @@
 .skills {
   &-container {
-    width: 90%;
+    width: 85%;
     column-count: 1;
   }
 }
